fixed hint font size being too big

--- a/app/globals.css
+++ b/app/globals.css
@@ -59,7 +59,7 @@ a {
   background: #F5F5F5;
 
   color: #333;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-family: var(--font-serif);
   letter-spacing: -0.0625rem;
 
